--- a/WORK/WORK.csproj
+++ b/WORK/WORK.csproj
@@ -545,6 +545,7 @@
         </Reference>
     </ItemGroup>
     <ItemGroup>
+        <Compile Include="Current\SomePlugin.cs" />
         <Compile Include="ETC\Готовые функции\dlya_npts.cs" />
         <Compile Include="ETC\Готовые функции\IQFakeActive.cs" />
         <Compile Include="ETC\Готовые функции\Outline.cs" />
@@ -568,9 +569,6 @@
         <Compile Include="ETC\Завершенные\TableList.cs" />
         <Compile Include="ETC\Завершенные\TpMenu.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
-    </ItemGroup>
-    <ItemGroup>
-      <Folder Include="Current" />
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
     <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
